# t-pack-diagnostic

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: build.rs  gen.rs  image_data.rs  input.rs  main.rs  output.rs  paths.rs  scan.rs  scanner.rs  slop.rs  slopx.rs  static_file_data.rs
src/scan/: images.rs  loc.rs  music.rs  sounds.rs
