[package]
name = "t_pack_diagnostic"
version = "2.0.0"
description = "Diagnostic tool for Terraria Resource Packs"
license = "MIT"
authors = ["ThEnderYoshi"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.3.19", features = ["derive", "string"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
csv = "1.2.2"
imagesize = "0.12.0"
lazy_static = "1.4.0"
regex = "1"
slop-rs = "0.1.0"
walkdir = "2"
